--- a/style.css
+++ b/style.css
@@ -340,21 +340,22 @@ img
     header.sticky
     {
         padding: 20px 50px;
+        z-index: 1000;
     }
     .menu
     {
         position: fixed;
         top: 75px;
-        left: -100px;
+        left: -100%;
         display: block;
-        padding: 20px 50px;
+        padding: 100px 50px;
         text-align: center;
-        width: 10%;
-        height: 10vh;
+        width: 100%;
+        height: 100vh;
         background: #fff;
         transition: 0.5s;
         z-index: 999;
-        border-top: 1px solid rgba(0,0,0,0,2);
+        border-top: 1px solid rgba(0,0,0,0.2);
     }
     .menu.active
     {
@@ -363,20 +364,23 @@ img
     header ul li a
     {
         color:#111;
+        font-size: 25px;
+        margin: 10px;
     }
     .toggle
     {
         width: 40px;
         height: 40px;
-        background: url(images/close.png);
+        background: url(images/menu.png);
         background-position: center;
         background-repeat: no-repeat;
         background-size: 30px;
         cursor: pointer;
+        
     }
     .toggle.active
     {
-        background: url(images/menu.png);
+        background: url(images/close.png);
         background-position: center;
         background-repeat: no-repeat;
         background-size: 35px;
